sitepreview/trust/v1.5.0/Requirements-DistributePKIMaterialAPI.md
# Distribute PKI material via API - WHO SMART Trust v1.5.0

* [**Table of Contents**](toc.md)
* [**Indices**](indices.md)
* [**Artifact Index**](artifacts.md)
* **Distribute PKI material via API**

## Requirements: Distribute PKI material via API (Experimental) 

| | |
| :--- | :--- |
| *Official URL*:http://smart.who.int/trust/Requirements/DistributePKIMaterialAPI | *Version*:1.5.0 |
| Active as of 2026-04-27 | *Computable Name*:Distribute Public Keys via API |

 
Make received trust material available through a distrubution point to a Trust Network Participant via API 

* Publisher: Contact Email
  * No publisher has been registered.: No contact email has been registered.
* Publisher: Jurisdiction
  * No publisher has been registered.: 
* Publisher: Statements
  * No publisher has been registered.: 
* Publisher: Derived from
  * No publisher has been registered.: This requirement is not derived from another requriement.
* Publisher: Derivatives
  * No publisher has been registered.: This requirement has the following derivatives:
* Publisher: Participating Actors
  * No publisher has been registered.: 



## Resource Content

```json
{
  "resourceType" : "Requirements",
  "id" : "DistributePKIMaterialAPI",
  "meta" : {
    "profile" : ["http://smart.who.int/base/StructureDefinition/SGRequirements"]
  },
  "extension" : [{
    "url" : "http://smart.who.int/base/StructureDefinition/Satisfies",
    "valueReference" : {
      "reference" : "Requirements/DistributePKIMaterial"
    }
  }],
  "url" : "http://smart.who.int/trust/Requirements/DistributePKIMaterialAPI",
  "version" : "1.5.0",
  "name" : "Distribute Public Keys via API",
  "title" : "Distribute PKI material via API",
  "status" : "active",
  "experimental" : true,
  "date" : "2026-04-27T07:28:36+00:00",
  "publisher" : "WHO",
  "contact" : [{
    "name" : "WHO",
    "telecom" : [{
      "system" : "url",
      "value" : "http://who.int"
    }]
  }],
  "description" : "Make received trust material available through a distrubution point to a Trust Network Participant via API",
  "jurisdiction" : [{
    "coding" : [{
      "system" : "http://unstats.un.org/unsd/methods/m49/m49.htm",
      "code" : "001"
    }]
  }],
  "actor" : ["http://smart.who.int/trust/ActorDefinition/TrustNetworkAnchor"]
}

```
